feat: add comprehensive development and project documentation
docs: create SAVote Project Plan outlining roadmap and risk management

feat: configure Nginx for HTTPS and API proxying

chore: add deployment and SSL setup scripts for production

feat: implement election system and SAML authentication specifications

docs: define API contract using OpenAPI for authentication and voter management

--- a/packages/shared-types/package.json
+++ b/packages/shared-types/package.json
@@ -14,7 +14,7 @@
     }
   },
   "scripts": {
-    "build": "npm run build:esm && npm run build:cjs",
+    "build": "pnpm run build:esm && pnpm run build:cjs",
     "build:esm": "tsc -p tsconfig.esm.json",
     "build:cjs": "tsc -p tsconfig.cjs.json",
     "dev": "tsc -p tsconfig.cjs.json -w"
