--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -1,5 +1,16 @@
+# ===========================================
+# 前端環境變數 - 開發環境
+# ===========================================
+
 # API Configuration
 VITE_API_BASE_URL=http://localhost:3000
 
+# Application Settings
+VITE_APP_NAME="NCUESA Election System (Dev)"
+VITE_APP_VERSION="1.0.0-dev"
+
 # Feature Flags
 VITE_ENABLE_DEV_TOOLS=true
+
+# SAML Login URL
+VITE_SAML_LOGIN_URL=http://localhost:3000/auth/saml/login
