--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,34 +2,35 @@ version: '3.8'
 
 services:
   postgres:
-    image: postgres:16-alpine
-    container_name: savote_postgres
-    restart: unless-stopped
+    image: postgres:16
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: password
-      POSTGRES_DB: savote_dev
+      POSTGRES_DB: voting_app
     ports:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
-      interval: 10s
+      interval: 5s
       timeout: 5s
       retries: 5
 
-  ngrok:
-    image: ngrok/ngrok:latest
-    container_name: savote_ngrok
-    restart: unless-stopped
-    command: "http http://host.docker.internal:3000"
-    environment:
-      NGROK_AUTHTOKEN: ${NGROK_AUTHTOKEN}
+  api:
+    build:
+      context: .
+      dockerfile: apps/api/Dockerfile
     ports:
-      - "4040:4040"
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
+      - "3000:3000"
+    environment:
+      DATABASE_URL: "postgresql://postgres:password@postgres:5432/voting_app?schema=public"
+      JWT_SECRET: "super-secret-jwt-key-change-in-production"
+      NODE_ENV: "production"
+    depends_on:
+      postgres:
+        condition: service_healthy
+    restart: always
 
 volumes:
   postgres_data:
